images, setup, output, and some Jupyter notebook comments

--- a/SpikeClassifier_DirectorySetup.ipynb
+++ b/SpikeClassifier_DirectorySetup.ipynb
@@ -4,16 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SpikeClassifier\n",
+    "# SpikeClassifier Directory Setup\n",
     "<p>\n",
-    "In this notebook, I'm going to build a neural net using tensorflow to train a model to identify if an object is actually a diffraction spike or not. I will use ~50 images pre-identified as spikes, and ~50 images that are not. The first thing I need to do is build my training set."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "At the top I'll import some useful libraries"
+    "This notebook downloads and organizes the spike images for public use."
    ]
   },
   {
@@ -43,6 +36,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import tarfile\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -58,11 +80,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< Updated upstream
-   "execution_count": 2,
-=======
    "execution_count": 6,
->>>>>>> Stashed changes
    "metadata": {
     "collapsed": true
    },
@@ -101,11 +119,7 @@
     "        epoch= url.split('private/')[1].split('/')[1]\n",
     "        objid=url.split('private/')[1].split('/')[-1].replace('stamp','')\n",
     "        localfile = cluster+'_'+epoch+'_'+objid\n",
-<<<<<<< Updated upstream
-    "        localfile = ('/Users/bsalmon/BrettSalmon/data_science/spike_not_spike/'\n",
-=======
     "        localfile = ('/Users/bsalmon/BrettSalmon/data_science/Spike-Classifier/images/'\n",
->>>>>>> Stashed changes
     "                     +localfile.replace('.html','_'+label+'.png'))\n",
     "\n",
     "        if os.path.isfile(database_file):\n",
@@ -118,11 +132,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< Updated upstream
-   "execution_count": 3,
-=======
    "execution_count": 10,
->>>>>>> Stashed changes
    "metadata": {},
    "outputs": [
     {
@@ -153,29 +163,12 @@
   },
   {
    "cell_type": "code",
-<<<<<<< Updated upstream
-   "execution_count": 4,
-=======
    "execution_count": 8,
->>>>>>> Stashed changes
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-<<<<<<< Updated upstream
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Widget Javascript not detected.  It may not be installed properly. Did you enable the widgetsnbextension? If not, then run \"jupyter nbextension enable --py --sys-prefix widgetsnbextension\"\n"
-=======
      "name": "stderr",
      "output_type": "stream",
      "text": [
@@ -187,7 +180,6 @@
      "output_type": "stream",
      "text": [
       "\n"
->>>>>>> Stashed changes
      ]
     }
    ],
@@ -630,27 +622,6 @@
    },
    "outputs": [],
    "source": []
-<<<<<<< Updated upstream
-=======
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
->>>>>>> Stashed changes
   }
  ],
  "metadata": {
